--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Khoa Pham WebRTC</title>
 
-    </head>
-    <body>
-       hjhgjhjggggggggggggg
-    </body>
-    
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
